--- a/config/database.yml
+++ b/config/database.yml
@@ -2,19 +2,19 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  port: <%= ENV.fetch("DATABASE_PORT", 5432) %>
 
 development:
   <<: *default
   database: appointment_app_backend_development
   username: <%= ENV.fetch('DATABASE_USERNAME', '') %>
   password: <%= ENV.fetch('DATABASE_PASSWORD', '') %>
-  password: <%= ENV.fetch('DATABASE_PORT', '') %>
 
 test:
   <<: *default
   database: appointment_app_backend_test
   username: <%= ENV.fetch('DATABASE_USERNAME', '') %>
-  password: <%= ENV.fetch('DATABASE_PORT', '') %>
+  password: <%= ENV.fetch('DATABASE_PASSWORD', '') %>
 
 production:
   <<: *default
