--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,7 @@ test:
 production:
   <<: *default
   url: <%= ENV['DATABASE_URL'] %>
+  port: 5432
   database: c00p75_db
   username: c00p75
   password: iCvPsaSDNFi7x20GoxmIorCFg3ZF3ERw
