--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ databases:
 
 services:
   - type: web
-    name: CycleCruise
+    name: cycle-cruise-backend
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
