--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,8 +11,8 @@ amazon:
   service: S3
   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: US West (Oregon) us-west-2
-  bucket: c00p75
+  region: us-east-1
+  bucket: c00p75-cycle-cruise
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
